# platformer-game

./: CMakeLists.txt  main.c
game/level1/: level1.c  level1.h
src/: engine.h  include.h
src/factory/: factory.c  factory.h
src/renderer/: camera.c  renderer.c  renderer.h
src/utils/: gl.c  gl.h  list.c  list.h
